--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -20,7 +20,7 @@ RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
 RUN rustup target install ${ARCH}-unknown-linux-musl
 
-RUN apt install musl-tools
+RUN apt install musl-tools -y
 
 # Build the Rust application
 RUN cargo build --release --target=${ARCH}-unknown-linux-musl
