--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -22,8 +22,7 @@ RUN rustup target install ${ARCH}-unknown-linux-musl
 
 RUN apt install musl-tools -y
 RUN apt install libssl-dev -y
-RUN PKG_CONFIG_SYSROOT_DIR=/
-
+RUN dpkg -L libssl-dev
 # Build the Rust application
 RUN cargo build --release --target=${ARCH}-unknown-linux-musl
 
