--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -22,8 +22,8 @@ RUN rustup target install ${ARCH}-unknown-linux-musl
 
 RUN apt install musl-tools -y
 RUN apt install libssl-dev -y
-RUN dpkg -L libssl-dev
-RUN echo $PKG_CONFIG_PATH
+RUN export PKG_CONFIG_PATH=/usr/lib/pkgconfig
+
 # Build the Rust application
 RUN cargo build --release --target=${ARCH}-unknown-linux-musl
 
