--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -22,6 +22,9 @@ RUN rustup target install ${ARCH}-unknown-linux-musl
 
 RUN apt install musl-tools -y
 RUN apt install libssl-dev -y
+RUN export PKG_CONFIG_SYSROOT_DIR=/
+RUN echo $PKG_CONFIG_SYSROOT_DIR
+RUN crate tree --target=x86_64-unknown-linux-musl -i openssl-sys
 
 # Build the Rust application
 RUN cargo build --release --target=${ARCH}-unknown-linux-musl
