--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -22,8 +22,9 @@ RUN rustup target install ${ARCH}-unknown-linux-musl
 
 RUN apt install musl-tools -y
 RUN apt install libssl-dev -y
-ENV PKG_CONFIG_SYSROOT_DIR=/
-RUN echo $PKG_CONFIG_SYSROOT_DIR
+RUN apt install pkg-config
+#ENV PKG_CONFIG_SYSROOT_DIR=/
+#RUN echo $PKG_CONFIG_SYSROOT_DIR
 
 # Build the Rust application
 RUN cargo build --release --target=${ARCH}-unknown-linux-musl
