--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -23,8 +23,9 @@ RUN rustup target install ${ARCH}-unknown-linux-musl
 RUN apt-get install musl-tools -y
 RUN apt-get install libssl-dev -y
 RUN apt-get install pkg-config -y
+RUN ldconfig -p pkgconfig
 ENV PKG_CONFIG_SYSROOT_DIR=/
-ENV PKG_CONFIG_PATH=/
+ENV PKG_CONFIG_PATH=/usr/share/pkgconfig
 RUN echo $PKG_CONFIG_SYSROOT_DIR
 
 # Build the Rust application
