--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -14,7 +14,7 @@ RUN if [ -n "${ARCH}" ]; \
 COPY att_doc_retriever_sample/rs .
 RUN apt-get update && apt-get install gcc curl -y\
     && apt-get install musl-tools -y\
-    && apt-get pkg-config libssl-dev -y \
+    && apt-get pkg-config libssl-dev -y
 RUN openssl version -d
 
 
