--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -17,9 +17,9 @@ RUN apt-get update && apt-get install gcc curl -y\
     && apt-get install libssl-dev -y\
     && apt-get install pkg-config -y
 
-ENV OPENSSL_LIB_DIR="/usr/lib/ssl"
-ENV OPENSSL_INCLUDE_DIR = "/usr/include/openssl"
-RUN echo $OPENSSL_DIR
+#ENV OPENSSL_LIB_DIR="/usr/lib/ssl"
+#ENV OPENSSL_INCLUDE_DIR = "/usr/include/openssl"
+#RUN echo $OPENSSL_DIR
 
 # Get Rust
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
