--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get install gcc curl -y\
 #ENV OPENSSL_LIB_DIR="/usr/lib/ssl"
 #ENV OPENSSL_INCLUDE_DIR = "/usr/include/openssl"
 #RUN echo $OPENSSL_DIR
-
+RUN apt-get install perl
 # Get Rust
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 
