--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -4,34 +4,33 @@
 #FROM ubuntu:latest AS builder
 #WORKDIR /root/att_doc_retriever_sample/rs/
 #ARG ARCH
-
-# Ensure the architecture is set
+#
+## Ensure the architecture is set
 #RUN if [ -n "${ARCH}" ]; \
- #   then echo "Will target architecture \"${ARCH}\"."; \
-  #  else echo "Target architecture not specified. Will exit."; exit 1; \
-   # fi
-
+#    then echo "Will target architecture \"${ARCH}\"."; \
+#    else echo "Target architecture not specified. Will exit."; exit 1; \
+#    fi
+#
 #COPY att_doc_retriever_sample/rs .
 #RUN apt-get update && apt-get install gcc curl -y\
- #   && apt-get install musl-tools -y\
-  #  && apt-get install libssl-dev -y\
-   # && apt-get install pkg-config -y
-
-#ENV OPENSSL_LIB_DIR="/usr/lib/ssl"
-#ENV OPENSSL_INCLUDE_DIR = "/usr/include/openssl"UNAME -M
-#RUN echo $OPENSSL_DIR
-#RUN apt-get install perl
-# Get Rust
+#    && apt-get install musl-tools -y\
+#    && apt-get install libssl-dev -y
+#
+##ENV OPENSSL_LIB_DIR="/usr/lib/ssl"
+##ENV OPENSSL_INCLUDE_DIR = "/usr/include/openssl"UNAME -M
+##RUN echo $OPENSSL_DIR
+##RUN apt-get install perl
+## Get Rust
 #RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-
 #ENV PATH="/root/.cargo/bin:${PATH}"
 #RUN rustup target install ${ARCH}-unknown-linux-musl
-#RUN openssl version -d
-#ENV PKG_CONFIG_SYSROOT_DIR=/
-#ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig
-#RUN echo $PKG_CONFIG_SYSROOT_DIR
-
-# Build the Rust application
+#
+##RUN openssl version -d
+##ENV PKG_CONFIG_SYSROOT_DIR=/
+##ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig
+##RUN echo $PKG_CONFIG_SYSROOT_DIR
+#
+## Build the Rust application
 #RUN cargo build --release --target=${ARCH}-unknown-linux-musl
 
 FROM python:3.7.9-alpine3.12
