--- a/att_doc_retriever_sample/rs/Cargo.toml
+++ b/att_doc_retriever_sample/rs/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 serde_bytes = "0.11"
 nitro-enclave-attestation-document = { git ="https://github.com/veracruz-project/nitro-enclave-attestation-document.git" }
 openssl = { version = "0.10", features = ["vendored"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.nsm-driver]
 git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
