--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -42,9 +42,9 @@ ARG ARCH
 
 # Copy the python client-server handler logic to the container
 COPY att_doc_retriever_sample/py/att_doc_retriever_sample .
-COPY att_doc_retriever_sample/py/fake .
 COPY att_doc_retriever_sample/py/att_doc_retriever_sample.py .
 COPY att_doc_retriever_sample/py/cert.der .
+COPY att_doc_retriever_sample/py/fake_cert.der .
 
 # Copy the client-server logic from the vsock sample to the container
 COPY vsock_sample/py/vsock-sample.py /root/vsock_sample/py/
