--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -38,11 +38,10 @@ WORKDIR /root/att_doc_retriever_sample/py/
 ARG ARCH
 
 RUN apk update
-RUN apk add --no-cache \
+RUN apk add \
 #    build-base \
     libffi-dev \
     openssl-dev \
-    cargo
 
 RUN pip install -U pip
 
