--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -42,7 +42,7 @@ RUN apk add --no-cache \
 #    build-base \
     libffi-dev \
     openssl-dev \
-#    cargo
+    cargo
 
 RUN pip install -U pip
 
