--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -67,6 +67,9 @@ COPY att_doc_retriever_sample/py/fake_cert.der .
 # Copy the client-server logic from the vsock sample to the container
 COPY vsock_sample/py/vsock-sample.py /root/vsock_sample/py/
 
+# Copy the tlser logic to the container
+COPY tls_connection_sample/py/tls_connection_sample.py /root/vsock_sample/py/
+
 # 5010 is the socket port
 #CMD ["python3", "/root/att_doc_retriever_sample/py/att_doc_retriever_sample.py", "server", "5010"]
 CMD ["python3", "/root/att_doc_retriever_sample/py/att_doc_retriever_sample.py", "tls_server", "5010"]
