--- a/att_doc_retriever_sample/Dockerfile
+++ b/att_doc_retriever_sample/Dockerfile
@@ -72,4 +72,4 @@ COPY tls_connection_sample/py/tls_connection_sample.py /root/vsock_sample/py/
 
 # 5010 is the socket port
 #CMD ["python3", "/root/att_doc_retriever_sample/py/att_doc_retriever_sample.py", "server", "5010"]
-CMD ["sudo", "python3", "/root/att_doc_retriever_sample/py/att_doc_retriever_sample.py", "tls_server", "5010"]
+CMD ["python3", "/root/att_doc_retriever_sample/py/att_doc_retriever_sample.py", "tls_server", "5010"]
