--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -4,10 +4,10 @@ RUN apk --no-cache add socat
 
 COPY index.html /usr/share/nginx/html/index.html
 
-COPY run.sh ./
+COPY utils/run.sh ./
 RUN ["chmod", "+x", "./run.sh"]
 
-COPY app.sh ./
+COPY utils/app.sh ./
 RUN ["chmod", "+x", "./app.sh"]
 
 CMD ["/bin/sh", "/run.sh"]
