--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -1,8 +1,8 @@
-# Use the official Python slim image as the base image
-FROM python:3.9-slim
+# Use the official Python slim image with Debian Buster as the base image
+FROM python:3.9-slim-buster
 
 # Install necessary packages (iproute2 for 'ip' command and socat)
-#RUN apt-get update && apt-get install -y iproute2 socat
+RUN apt-get update && apt-get install -y iproute2 socat
 
 # Install Flask and other required dependencies
 RUN pip install Flask gunicorn
@@ -11,7 +11,7 @@ RUN pip install Flask gunicorn
 COPY app.py /app.py
 
 # Copy the run.sh scripts into the container
-#COPY utils/run.sh /run.sh
+COPY utils/run.sh /run.sh
 
 # Set the working directory to / to run the Flask app
 WORKDIR /
@@ -20,11 +20,10 @@ WORKDIR /
 EXPOSE 80
 
 # Set execution permission for the scripts
-#RUN chmod +x /run.sh
+RUN chmod +x /run.sh
 
 # Execute the run.sh script before starting the Flask app
-#ENTRYPOINT ["/run.sh"]
+ENTRYPOINT ["/run.sh"]
 
 # Run the Flask app using Gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
-
