--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -1,29 +1,43 @@
-# Use the official Python slim image with Debian Buster as the base image
-FROM python:3.9-slim-buster
-
-# Install necessary packages (iproute2 for 'ip' command and socat)
-#RUN apt-get update && apt-get install -y iproute2 socat
+## Use the official Python slim image with Debian Buster as the base image
+#FROM python:3.9-slim-buster
 #
-## Install Flask and other required dependencies
-#RUN pip install Flask gunicorn
+## Install necessary packages (iproute2 for 'ip' command and socat)
+##RUN apt-get update && apt-get install -y iproute2 socat
+##
+### Install Flask and other required dependencies
+##RUN pip install Flask gunicorn
+##
+### Copy the app.py file into the container
+##COPY app.py /app.py
 #
-## Copy the app.py file into the container
-#COPY app.py /app.py
+## Copy the run.sh scripts into the container
+#COPY utils/run.sh /run.sh
+#
+## Set the working directory to / to run the Flask app
+#WORKDIR /
+#
+## Expose port 80 to allow communication with the Flask app
+#EXPOSE 80
+#
+## Set execution permission for the scripts
+#RUN chmod +x /run.sh
+#
+## Execute the run.sh script before starting the Flask app
+#ENTRYPOINT ["/run.sh"]
+#
+## Run the Flask app using Gunicorn
+##CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
 
-# Copy the run.sh scripts into the container
-COPY utils/run.sh /run.sh
+FROM nginx:stable-alpine
 
-# Set the working directory to / to run the Flask app
-WORKDIR /
+RUN apk --no-cache add socat
 
-# Expose port 80 to allow communication with the Flask app
-EXPOSE 80
+COPY index.html /usr/share/nginx/html/index.html
 
-# Set execution permission for the scripts
-RUN chmod +x /run.sh
+COPY utils/run.sh ./
+RUN ["chmod", "+x", "./run.sh"]
 
-# Execute the run.sh script before starting the Flask app
-ENTRYPOINT ["/run.sh"]
+COPY utils/app.sh ./
+RUN ["chmod", "+x", "./app.sh"]
 
-# Run the Flask app using Gunicorn
-#CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+CMD ["/bin/sh", "/run.sh"]
