--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.9-slim-buster
 WORKDIR /
 
 # Install necessary packages (iproute2 for 'ip' command and socat)
-#RUN apt-get update && apt-get install -y iproute2 socat
+RUN apt-get update && apt-get install -y iproute2 socat
 
 # Install Flask and other required dependencies
 RUN pip install Flask gunicorn
@@ -16,16 +16,16 @@ COPY app.py .
 # Copy the run.sh scripts into the container
 COPY utils/run.sh .
 
-
 # Expose port 80 to allow communication with the Flask app
 EXPOSE 80
 
-## Set execution permission for the scripts
-#RUN chmod +x run.sh
-#
-## Execute the run.sh script before starting the Flask app
+# Set execution permission for the scripts
+RUN chmod +x run.sh
+
+# Execute the run.sh script before starting the Flask app
 #ENTRYPOINT ["/run.sh"]
 
 # Run the Flask app using Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+#CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+CMD ["bash"]
 
