--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -5,19 +5,19 @@ FROM ubuntu:latest
 WORKDIR /
 
 ## Install necessary packages (iproute2 for 'ip' command and socat)
-#RUN apt-get update && apt-get install -y iproute2 socat
+RUN apt-get update && apt-get install -y iproute2 socat
 #
 ## Install Flask and other required dependencies
-#RUN pip install Flask gunicorn
+RUN pip install Flask gunicorn
 #
 ## Copy the app.py file into the container
-#COPY app.py .
+COPY app.py .
 #
 ## Copy the run.sh scripts into the container
 #COPY utils/run.sh .
 #
 ## Expose port 80 to allow communication with the Flask app
-#EXPOSE 80
+EXPOSE 80
 #
 ## Set execution permission for the scripts
 #RUN chmod +x run.sh
@@ -26,6 +26,5 @@ WORKDIR /
 ##ENTRYPOINT ["/run.sh"]
 
 # Run the Flask app using Gunicorn
-#CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
-CMD ["bash"]
+CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
 
