--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -30,5 +30,6 @@ COPY app.py .
 ##ENTRYPOINT ["/run.sh"]
 
 # Run the Flask app using Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+#CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
 
+CMD ["gunicorn","app"]
