--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -4,23 +4,20 @@ FROM ubuntu:latest
 # Set the working directory to / to run the Flask app
 WORKDIR /
 
-## Install necessary packages (iproute2 for 'ip' command and socat)
+# Install necessary packages (iproute2 for 'ip' command and socat)
 RUN apt-get update && apt-get install -y iproute2 socat
 RUN apt-get update && apt-get install -y python3 python3-pip
 
-#
-## Install Flask and other required dependencies
-#RUN pip install Flask gunicorn
-RUN pip3 install Flask gunicorn
+# Install Flask and other required dependencies
+RUN pip3 install Flask
 
-#
-## Copy the app.py file into the container
+# Copy the app.py file into the container
 COPY app.py .
-#
-## Copy the run.sh scripts into the container
+
+# Copy the run.sh script into the container
 COPY utils/run.sh .
 
-## Expose port 80 to allow communication with the Flask app
+# Expose port 80 to allow communication with the Flask app
 EXPOSE 80
 
 # Set execution permission for the scripts
@@ -29,5 +26,5 @@ RUN chmod +x run.sh
 # Route traffic from host port 5000 to Docker container port 80 using vsock
 ENTRYPOINT ["/run.sh"]
 
-# Run the Flask app using Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+# Run the Flask app using the built-in development server
+CMD ["python3", "app.py"]
