--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y python3 python3-pip socat
 
 # Install Flask and other required dependencies
 RUN pip3 install Flask
+RUN pip3 install cryptography
 
 # Copy the app.py file into the container
 COPY app.py .
