--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -1,19 +1,24 @@
-# Use the official Python slim image with Debian Buster as the base image
-FROM ubuntu:latest
+# Use a lightweight Linux distribution as the base image
+FROM python:3.9-slim-buster AS base
 
-# Set the working directory to / to run the Flask app
-WORKDIR /
+# Set the working directory to /app to run the Flask app
+WORKDIR /app
 
 # Install necessary packages (iproute2 for 'ip' command and socat)
 RUN apt-get update && apt-get install -y iproute2 socat
-RUN apt-get update && apt-get install -y python3 python3-pip socat
 
 # Install Flask and other required dependencies
-RUN pip3 install Flask
-RUN pip3 install cryptography
+RUN pip install Flask cryptography
 
 # Copy the app.py file into the container
 COPY app.py .
+
+# Expose port 80 to allow communication with the Flask app
+EXPOSE 80
+
+
+# Use a separate build stage to add the Rust binary and certificate
+FROM base AS final
 
 # Copy Rust binary and Amazon certificate
 COPY utils/att_doc_retriever_sample .
@@ -22,15 +27,8 @@ COPY utils/cert.der .
 # Copy the run.sh script into the container
 COPY utils/run.sh .
 
-# Expose port 80 to allow communication with the Flask app
-EXPOSE 80
-
 # Set execution permission for the scripts
 RUN chmod +x run.sh
 
-
+# Run the Flask app using the run.sh script
 CMD ["./run.sh"]
-
-
-# Run the Flask app using the built-in development server
-#CMD ["python3", "app.py"]
