--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -1,22 +1,23 @@
-# Use the official Python slim image with Debian Buster as the base image
-FROM ubuntu:latest
+# Use a Python slim image as the base image
+FROM python:3.9-slim-buster
 
-# Set the working directory to / to run the Flask app
-WORKDIR /
+# Set the working directory to /app
+WORKDIR /app
 
 # Install necessary packages (iproute2 for 'ip' command and socat)
-RUN apt-get update && apt-get install -y iproute2 socat
-RUN apt-get update && apt-get install -y python3 python3-pip socat
+RUN apt-get update \
+    && apt-get install -y iproute2 socat \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Flask and other required dependencies
-RUN pip3 install Flask
+RUN pip install Flask
 
 # Copy the app.py file into the container
 COPY app.py .
 
 # Copy Rust binary and Amazon certificate
-COPY utils/att_doc_retriever_sample .
-COPY utils/cert.der .
+COPY utils/att_doc_retriever_sample utils/cert.der .
 
 # Copy the run.sh script into the container
 COPY utils/run.sh .
@@ -27,9 +28,5 @@ EXPOSE 80
 # Set execution permission for the scripts
 RUN chmod +x run.sh
 
-
+# Run the Flask app using the run.sh script
 CMD ["./run.sh"]
-
-
-# Run the Flask app using the built-in development server
-#CMD ["python3", "app.py"]
