--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -17,6 +17,16 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+    server {
+        listen 443 ssl default_server;
+        server_name enclaves.com;
+        ssl_certificate /etc/ssl/certs/enclaves.pem;
+        ssl_certificate_key /etc/ssl/private/enclaves.key;
 
+        location / {
+            proxy_pass http://app:8000;  # Assuming your Gunicorn app is running on port 8000 in the container
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
