--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -9,11 +9,11 @@ http {
 
     server {
         listen 443 ssl default_server;
-        server_name ec2-18-159-107-60.eu-central-1.compute.amazonaws.com;
+        server_name enclaves.com;
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
         location / {
-            proxy_pass http://app:8000;  # Assuming your Gunicorn app is running on port 8000 in the container
+            proxy_pass http://app:443;  # Assuming your Gunicorn app is running on port 8000 in the container
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
