--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -6,7 +6,11 @@ events {
 
 http {
     sendfile on;
-
+    server {
+        listen 80;
+        server_name enclaves.com;
+        return 301 https://$host$request_uri;
+    }
     server {
         listen 443 ssl default_server;
         server_name enclaves.com;
