--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
         location / {
-            proxy_pass http://app:8000;  # Assuming your Gunicorn app is running on port 443 in the container
+            proxy_pass http://app:8000;  # Assuming Gunicorn app is running on port 8000 in the container
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
