--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
     sendfile on;
     server {
         listen 443 ssl default_server;
-#         server_name enclaves.com;
+        server_name ec2-3-70-208-250.eu-central-1.compute.amazonaws.com;
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
 #         location / {
