--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -1,5 +1,7 @@
 worker_processes 1;
-
+upstream website {
+    server 127.0.0.1:8000;
+}
 events {
     worker_connections 1024;
 }
@@ -17,5 +19,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+    }
+    server {
+        listen 80;
+        server_name enclaves.com;
+        return 301 https://$host$request_uri;
     }
 }
