--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
     sendfile on;
     server {
         listen 443 ssl default_server;
-        server_name enclaves.com;
+        server_name ec2-3-70-208-250.eu-central-1.compute.amazonaws.com;
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
         location / {
@@ -19,7 +19,7 @@ http {
     }
     server {
         listen 80;
-        server_name enclaves.com;
+        server_name ec2-3-70-208-250.eu-central-1.compute.amazonaws.com;
         return 301 https://$host$request_uri;
     }
 }
