--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -10,8 +10,9 @@ http {
         server_name ec2-3-70-208-250.eu-central-1.compute.amazonaws.com;
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
         location / {
-            proxy_pass http://app:8000;  # Assuming Gunicorn app is running on port 8000 in the container
+            proxy_pass http://127.0.0.1:8000;  # Assuming Gunicorn app is running on port 8000 in the container
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
