--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -12,11 +12,16 @@ http {
         ssl_certificate_key /etc/ssl/private/enclaves.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         location / {
-            proxy_pass http://127.0.0.1:8000;  # Assuming Gunicorn app is running on port 443 in the container
+            proxy_pass http://127.0.0.1:8000;  # Gunicorn app is running on port 8000
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+    }
+    server {
+        listen 80;
+        server_name enclaves.com;
+        return 301 https://$host$request_uri;
     }
 
 }
