--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
     sendfile on;
     server {
         listen 443 ssl default_server;
-        server_name ec2-3-70-208-250.eu-central-1.compute.amazonaws.com;
+        server_name enclaves.com;
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
