--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -16,6 +16,10 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+         # gRPC handling
+        location / {
+            grpc_pass grpc://127.0.0.1:50051;
+        }
 
     }
     server {
