--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -1,31 +1,40 @@
 worker_processes 1;
+
 events {
     worker_connections 1024;
 }
 
 http {
     sendfile on;
+
     server {
         listen 443 ssl default_server;
         server_name enclaves.com;
+
+        # SSL certificate and key paths
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
+
+        # SSL protocols to support
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+
         location / {
-            proxy_pass http://127.0.0.1:8000;  # Gunicorn app is running on port 8000
+            # Proxy regular HTTP requests to the Flask app running on port 8000
+            proxy_pass http://127.0.0.1:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
-         # gRPC handling
-        location / {
+
+        # gRPC handling
+        location /grpc {
             grpc_pass grpc://127.0.0.1:50051;
         }
-
     }
+
+    # Redirect HTTP requests to HTTPS
     server {
         listen 80;
         server_name enclaves.com;
         return 301 https://$host$request_uri;
     }
-
 }
