--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
 
         # gRPC handling
         location /grpc {
-            grpc_pass http://127.0.0.1:50051;
+            grpc_pass grpc://127.0.0.1:50051;
         }
     }
 
