--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -38,6 +38,9 @@ EXPOSE 80
 EXPOSE 50051
 EXPOSE 50052
 
+# Generate Python files from the proto definition
+RUN python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. myservice.proto
+
 # Set execution permission for the scripts
 RUN chmod +x run.sh
 
