--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -8,15 +8,14 @@ http {
     sendfile on;
 
     server {
-        listen 443 ssl default_server;
+        listen 443 ssl http2 default_server;
         server_name enclaves.com;
-        http2 on;
         # SSL certificate and key paths
         ssl_certificate /etc/ssl/certs/enclaves.pem;
         ssl_certificate_key /etc/ssl/private/enclaves.key;
 
         # SSL protocols to support
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3 HTTP/2;
 
         location / {
             # Proxy regular HTTP requests to the Flask app running on port 8000
