--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
         ssl_certificate_key /etc/ssl/private/enclaves.key;
 
         # SSL protocols to support
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3 HTTP/2;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
         location / {
             # Proxy regular HTTP requests to the Flask app running on port 8000
