--- a/att_doc_verifier/Cargo.toml
+++ b/att_doc_verifier/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "att_doc_retriever_sample"
+name = "att_doc_verifer"
 version = "0.1.0"
-authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
