--- a/att_doc_retriever_sample/rs/Cargo.toml
+++ b/att_doc_retriever_sample/rs/Cargo.toml
@@ -13,6 +13,9 @@ openssl = { version = "0.10", features = ["vendored"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rsa = "0.3.0"
+bytes = "1.0"
+tokio = { version = "1", features = ["full"] }
+
 
 
 
