--- a/flask_tls_example/nginx/nginx.conf
+++ b/flask_tls_example/nginx/nginx.conf
@@ -29,10 +29,15 @@ http {
         }
     }
 
-    # Redirect HTTP requests to HTTPS
+    # Redirect HTTP
     server {
         listen 80;
         server_name enclaves.com;
-        return 301 https://$host$request_uri;
+        location /api/public_certificate {
+            # Proxy regular HTTP requests to the Flask app running on port 8000
+            proxy_pass http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
